--- a/.config/tmux/statusline.conf
+++ b/.config/tmux/statusline.conf
@@ -4,8 +4,8 @@
 #set -g message-style "fg=#eee8d5,bg=#073642"
 #set -g message-command-style "fg=#eee8d5,bg=#073642"
 
-set -g pane-border-style "fg=#073642"
-set -g pane-active-border-style "fg=#eee8d5"
+#set -g pane-border-style "fg=#073642"
+#set -g pane-active-border-style "fg=#eee8d5"
 
 set -g status "on"
 set -g status-interval 1
@@ -26,6 +26,6 @@ set -g status-right-style NONE
 
 #setw -g window-status-activity-style "underscore,fg=#839496,bg=#002b36"
 setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#839496,bg=#002b36"
+#setw -g window-status-style "NONE,fg=#839496,bg=#002b36"
 #setw -g window-status-format '#[fg=#002b36,bg=#002b36]#[default] #I  #{b:pane_current_path} #[fg=#002b36,bg=#002b36,nobold,nounderscore,noitalics]'
 #setw -g window-status-current-format '#[fg=#002b36,bg=#eee8d5]#[fg=#b58900,bg=#eee8d5] #I #[fg=#eee8d5,bg=#b58900] #{b:pane_current_path} #[fg=#b58900,bg=#002b36,nobold]'
